Bug 1927258 - Add a fade effect when vertical pinned tabs overflow r=sidebar-reviewers,desktop-theme-reviewers,tabbrowser-reviewers,emilio,reusable-components-reviewers,dao,tgiles,sfoster
Differential Revision: https://phabricator.services.mozilla.com/D237645

UltraBlame original commit: 2de353289e4535d2cdd1da35b8eea35902fd24b7

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -10632,6 +10632,49 @@ tabs
 -
 container
 {
+/
+*
+Fit
+slightly
+more
+than
+5
+tabs
++
+padding
+before
+overflowing
+*
+/
+max
+-
+height
+:
+calc
+(
+5
+*
+var
+(
+-
+-
+tabstrip
+-
+min
+-
+height
+)
++
+var
+(
+-
+-
+space
+-
+large
+)
+)
+;
 -
 -
 tab
@@ -10691,10 +10734,87 @@ default
 )
 )
 ;
+&
+:
+empty
+{
 display
 :
 none
 ;
+}
+&
+:
+:
+part
+(
+scrollbutton
+-
+up
+)
+&
+:
+:
+part
+(
+scrollbutton
+-
+down
+)
+{
+display
+:
+none
+;
+}
+&
+:
+:
+part
+(
+scrollbox
+)
+{
+scrollbar
+-
+width
+:
+thin
+;
+scrollbar
+-
+color
+:
+var
+(
+-
+-
+vertical
+-
+tabs
+-
+scrollbar
+-
+color
+)
+;
+overflow
+-
+y
+:
+auto
+;
+}
+&
+:
+:
+part
+(
+items
+-
+wrapper
+)
+{
 grid
 -
 template
@@ -10726,84 +10846,171 @@ auto
 )
 )
 ;
-overflow
--
-y
+display
 :
-auto
+grid
 ;
-overflow
--
-x
-:
-hidden
-;
-scrollbar
--
-width
-:
-thin
-;
-scrollbar
--
-color
-:
-var
-(
--
--
-vertical
--
-tabs
--
-scrollbar
--
-color
-)
-;
-/
-*
-Fit
-slightly
-more
-than
-5
-tabs
-+
 padding
-before
-overflowing
-*
-/
-max
 -
-height
+inline
 :
-calc
-(
-5
-*
 var
 (
 -
 -
-tabstrip
+tab
 -
-min
+pinned
 -
-height
+container
+-
+margin
+-
+inline
+-
+expanded
 )
-+
+;
+}
+&
+:
+not
+(
+[
+scrolledtostart
+]
+)
+:
+:
+part
+(
+overflow
+-
+start
+-
+indicator
+)
+&
+:
+not
+(
+[
+scrolledtoend
+]
+)
+:
+:
+part
+(
+overflow
+-
+end
+-
+indicator
+)
+{
+background
+-
+image
+:
+linear
+-
+gradient
+(
+to
+top
+transparent
+0
+%
 var
 (
 -
 -
-space
+toolbox
 -
-large
+bgcolor
 )
 )
 ;
+background
+-
+repeat
+:
+no
+-
+repeat
+;
+pointer
+-
+events
+:
+none
+;
+position
+:
+relative
+;
+height
+:
+16px
+;
+z
+-
+index
+:
+1
+;
+}
+&
+:
+:
+part
+(
+overflow
+-
+start
+-
+indicator
+)
+{
+margin
+-
+block
+:
+0
+-
+16px
+;
+}
+&
+:
+:
+part
+(
+overflow
+-
+end
+-
+indicator
+)
+{
+transform
+:
+scaleY
+(
+-
+1
+)
+;
+margin
+-
+block
+:
+-
+16px
+0
+;
+}
 .
 tab
 -
@@ -10929,27 +11136,6 @@ expanded
 >
 &
 {
-padding
--
-inline
-:
-var
-(
--
--
-tab
--
-pinned
--
-container
--
-margin
--
-inline
--
-expanded
-)
-;
 .
 tab
 -
